--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -95,12 +95,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "7bd21354-ed9a-4e5d-a670-2e5231dfffc2"
   }
 }
