CRUD Rendez-vous

--- a/Patient/src/main/resources/application.properties
+++ b/Patient/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=patient
 
-# Profil actif par défaut
+# Profil actif par defaut
 spring.profiles.active=postgres
 
 # Configuration commune pour JPA
