last modification before presentation

--- a/Patient/src/main/resources/application.properties
+++ b/Patient/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=patient
 
+app.security.user.name=user
+app.security.user.password=password
+
 # Profil actif par defaut
 spring.profiles.active=postgres
 
